import { MotorcycleMakesDocument } from '@motovault/graphql';
import { useQuery } from '@tanstack/react-query';
import { gqlFetcher } from '../lib/graphql-client';
import { queryKeys } from '../lib/query-keys';

const POPULAR_MAKES = [
  'Honda',
  'Yamaha',
  'Kawasaki',
  'Harley-Davidson',
  'Suzuki',
  'BMW',
  'Ducati',
  'KTM',
...
